# hammurabi

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC.md  bot-pk.pem  getting-started.md  hammurabi.toml.example  install.md  knope.toml  tmp.md
.github/workflows/: build.yml  ci.yml  docker-smoke.yml  helm-release.yml  images.yml  prepare-release.yml  release-promote.yml  release.yml
deploy/docker/: Dockerfile.base  Dockerfile.claude  Dockerfile.codex  Dockerfile.gemini  README.md
deploy/helm/hammurabi/: Chart.yaml  README.md  values.yaml
deploy/helm/hammurabi/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  pvc.yaml  secret.yaml
deploy/k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  pvc.yaml  secret.yaml
docs/: architecture.md
docs/superpowers/specs/: 2026-03-27-hammurabi-design.md
src/: access.rs  approval.rs  claude.rs  config.rs  db.rs  discord.rs  discord_serenity.rs  env_expand.rs  error.rs  github.rs  hooks.rs  lock.rs  main.rs  models.rs  poller.rs  prompts.rs  publisher.rs  state_machine.rs  worktree.rs
src/acp/: events.rs  mod.rs  permission.rs  registry.rs  session.rs  spawn.rs  wire.rs
src/agents/: acp.rs  claude_cli.rs  mock.rs  mod.rs  registry.rs
src/transitions/: agents_working.rs  completion.rs  decomposing.rs  implementing.rs  mod.rs  progress.rs  reviewing.rs  spec_drafting.rs
tests/: acp_client_integration.rs  integration_discord_lifecycle.rs  integration_error_handling.rs  integration_lifecycle.rs
tests/support/fake_acp_agent/: main.rs
