[package]
name = "hammurabi"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
description = "CLI daemon that orchestrates AI agents to automate GitHub issue lifecycles with human approval gates"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
jsonwebtoken = "9"
octocrab = "0.41"
secrecy = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Discord integration is feature-gated so builds that only use GitHub
# intake don't pay the serenity compile cost. `http`/`model`/`builder`
# are enough for the polling-based runtime we ship in Phase 5; the full
# Gateway client (`client` + `gateway` features) is a future upgrade.
serenity = { version = "0.12", default-features = false, features = ["builder", "http", "model", "rustls_backend"], optional = true }

[features]
default = []
discord = ["dep:serenity"]

[profile.dev.package."*"]
debug = false

# Primary daemon binary. Listed explicitly so the test-support binary below
# can coexist without Cargo emitting default-run ambiguity warnings.
[[bin]]
name = "hammurabi"
path = "src/main.rs"

# Test-support binary: a scripted fake ACP agent driven via stdio. Exposed
# to integration tests through the CARGO_BIN_EXE_fake-acp-agent env var.
[[bin]]
name = "fake-acp-agent"
path = "tests/support/fake_acp_agent/main.rs"
test = false
doctest = false
